Fixed issue where links were not clickable because they were hidden behind the container fill

--- a/less/_base.less
+++ b/less/_base.less
@@ -288,6 +288,7 @@ img {
   height: 100%;
   position: absolute;
   top: 0; left: 0;
+  z-index: -1;
 }
 
 .color-correction-wrapper{
